2008-01-07  Richard Jones  <rjones@redhat.com>

	Include required libraries in the Windows installer.
	* wininstaller.nsis: Include *.dll files.

	Windows installer.
	* Makefile.in, configure.ac: Add --with-nsis[=path/to/nsis] and
	  call out to 'makensis.exe'.
	* wininstaller.nsis, winlicense.rtf: Configuration and support
	  files for NSIS-based Windows installer.
	* README: Update documentation to reflect.

2008-01-05  Richard Jones  <rjones@redhat.com>

	mlvirtmanager compiles and runs on Windows (MinGW).
	* configure.ac: Directories to search for optional modules were
	  specified incorrectly - fixed.
	* mlvirtmanager/Makefile.in: Changed so can build without
	  ocamlfind, and checked it can build on Windows.

	mlvirsh can compile without extlib
	* mlvirsh/mlvirsh.ml: mlvirsh only needed three functions from
	  extlib, so copy them in here to avoid the dependency.
	* configure.ac: No dependency on extlib for mlvirsh.
	* mlvirsh/Makefile.in: Changed so can build without ocamlfind.
	* README: Updated documentation.

	Update documentation for Windows.
	* README: Update documentation for Windows.

	Build libvirt and examples on Windows (MinGW).
	* aclocal.m4: Add AC_CHECK_OCAML_MODULE to check for OCaml
	  modules directly (without ocamlfind being needed).
	* configure.ac: Remove requirement for ocamlfind.
	* config.guess, config.sub: Ship these files to guess host,
	  build and target.
	* libvirt/Makefile.in, examples/Makefile.in: Change these
	  so they don't require ocamlfind, do the right thing on MinGW.
	* Make.rules.in: Make.rules is now generated from this file.
	  File can use ocamlfind or direct ocaml commands as available.
	* .hgignore: Ignore some generated files on Windows.

2008-01-04  Richard Jones  <rjones@redhat.com>

	Make extlib an optional dependency.
	* Makefile.in, README, configure.ac, examples/Makefile.in,
	  libvirt/Makefile.in, mlvirtmanager/Makefile.in: Much code
	  doesn't really need extlib, so make it optional.