@@ -1,5 +1,12 @@
 2008-01-07  Richard Jones  <rjones@redhat.com>
 
+	Bundle Gtk DLLs and support files in the Windows installer.
+	* configure.ac: Detect library paths instead of hard-
+	  coding them.
+	* wininstaller.nsis (removed): This file is now autogenerated.
+	* wininstaller.nsis.in: Bundle Gtk DLLs and support files.
+	* Makefile.in: More verbose messages from NSIS.
+
 	Include required libraries in the Windows installer.
 	* wininstaller.nsis: Include *.dll files.
 
